--- a/blog/templates/nosotros.html
+++ b/blog/templates/nosotros.html
@@ -2,10 +2,61 @@
 {% load static %}
 {% block titulo %} Nosotros {% endblock titulo %}
 {% block titulo_pagina %} Nosotros {% endblock titulo_pagina %}
+{% block menu_pagina %}
+<nav class="navbar navbar-expand-lg ">
+  <div class="container-fluid">
+    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="toggler-icon top-bar"></span>
+      <span class="toggler-icon middle-bar"></span>
+      <span class="toggler-icon bottom-bar"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="nav navbar-nav  py-2">
+        <li class="nav-item">
+          <a href="{% url 'blog:index' %}">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'blog:listar_resena' %}">Reseñas</a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'blog:listar_categoria' %}">Categorías</a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'blog:listar_autor' %}">Autores</a>
+        </li>
+        <li class="nav-item active">
+          <a href="{% url 'blog:nosotros' %}">Nosotros</a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'blog:contacto' %}">Contacto</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+{% endblock menu_pagina %}
 {% block sub_titulo_pagina %} 
 Los Hacedores del Blog
 {% endblock sub_titulo_pagina %}
 {% block imagen_principal %} {% static '/assets/img/nosotros.jpg' %} {% endblock imagen_principal %}
+
+
+
+{% block menu_footer %}
+<ul>
+    <li class="fot-item">
+        <a href="{% url 'blog:index' %}">Inicio</a>
+    </li>
+    <li class="fot-item  fot-item-active">
+        <a href="{% url 'blog:nosotros' %}">Nosotros</a>
+    </li>
+    <li class="fot-item">
+        <a href="{% url 'blog:contacto' %}">Contacto</a>
+    </li>
+</ul>
+{% endblock menu_footer %}
 
 
 
