--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -2,70 +2,95 @@
 {% load static %}
 {% block titulo %} Login {% endblock titulo %}
 {% block titulo_pagina %} Login {% endblock titulo_pagina %}
+{% block menu_pagina %}
+<nav class="navbar navbar-expand-lg ">
+    <div class="container-fluid">
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="toggler-icon top-bar"></span>
+            <span class="toggler-icon middle-bar"></span>
+            <span class="toggler-icon bottom-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="nav navbar-nav  py-2">
+                <li class="nav-item">
+                    <a href="{% url 'blog:index' %}">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'blog:listar_resena' %}">Reseñas</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'blog:listar_categoria' %}">Categorías</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'blog:listar_autor' %}">Autores</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'blog:nosotros' %}">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'blog:contacto' %}">Contacto</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+{% endblock menu_pagina %}
 {% block sub_titulo_pagina %} 
-para acceder a los contenidos del sitio
+Inicia Sesión
 {% endblock sub_titulo_pagina %}
 {% block imagen_principal %} {% static 'assets/img/login.jpg' %} {% endblock imagen_principal %}
 {% block contenido %}
-{% load crispy_forms_tags %}
-<section class="h-100 gradient-form" style="background-color: #eee;">
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-xl-10">
-          <div class="card rounded-3 text-black">
-            <div class="row g-0">
-              <div class="col-lg-6">
-                <div class="card-body p-md-5 mx-md-4">
-  
-                  <div class="text-center">
-                    <img src="{% static 'assets/img/logo.png' %}" 
-                      style="width: 185px;" alt="logo">
-                    <h4 class="mt-1 mb-5 pb-1">Libros y Cosas</h4>
-                  </div>
-  
-                  <form action="" method="post" class="text-center">
-                      {% csrf_token %}
-                      {{ form | crispy }}
-                    <!-- <div class="form-outline mb-4">
-                      <input type="email" id="form2Example11" class="form-control"
-                        placeholder="Phone number or email address" />
-                      <label class="form-label" for="form2Example11">Usuario</label>
-                    </div>
-  
-                    <div class="form-outline mb-4">
-                      <input type="password" id="form2Example22" class="form-control" />
-                      <label class="form-label" for="form2Example22">Password</label>
-                    </div>
-   -->
-                    <div class="py-4 pb-1 d-flex justify-content-center align-content-center">
-                      <!-- <button class="btn btn-danger btn-block fa-lg px-3 mx-3" 
-                      onclick="location.href='{% url 'blog:home' %}'"  type="submit">Volver</button> -->
-                      <button class="btn btn-success btn-block fa-lg px-3 mx-3" type="submit">Login</button>
-                      <!-- <a class="text-muted" href="#!">Forgot password?</a> -->
-                    </div>
-  
-                    <div class="d-flex align-items-center justify-content-center py-4">
-                      <p class="mb-0 me-2">¿No tienes una Cuenta?</p>
-                      <button type="button" class="btn btn-outline-danger" onclick="location.href='{% url 'blog:registro' %}'">Crea Una</button>
-                    </div>
-  
-                  </form>
-  
-                </div>
-              </div>
-              <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
-                <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                  <h4 class="mb-4">We are more than just a company</h4>
-                  <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-              </div>
+<div class="col-lg-9">
+  <div class="card">
+    <div class="card-header">Libros y Cosas</div>
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="card-body p-md-5 mx-md-4">
+          <form action="" method="post">
+            {% csrf_token %}
+            <!-- Username input -->
+            <div class="form-outline mb-4">
+              <label class="form-label" for="registerUsername">Nombre de Usuario</label>
+              <input type="text" id="registerUsername" class="form-control" name="username"
+                placeholder="Su Nombre de Usuario" required />
             </div>
-          </div>
+            <!-- Password input -->
+            <div class="form-outline mb-4">
+              <label class="form-label" for="registerPassword">Password</label>
+              <input type="password" id="registerPassword" class="form-control" name="password" 
+              placeholder="Ingrese su Contraseña" required />
+            </div>
+            <div class="py-4 pb-1 d-flex justify-content-center align-content-center">
+              <button class="btn btn-danger px-3 mx-3" type="submit">Ingresa</button>
+
+            </div>
+
+          </form>
+        </div>
+      </div>
+      <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
+        <div class="text-black px-3 py-4 p-md-5 mx-md-4">
+          <h4 class="mb-4">Somos más que un Blog de Libros</h4>
+          <p class="small mb-0">Amamos lo que leemos y queremos compartirlo contigo.</p>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</div>
 
 {% endblock contenido %}
+{% block menu_footer %}
+<ul>
+    <li class="fot-item">
+        <a href="{% url 'blog:index' %}">Inicio</a>
+    </li>
+    <li class="fot-item">
+        <a href="{% url 'blog:nosotros' %}">Nosotros</a>
+    </li>
+    <li class="fot-item">
+        <a href="{% url 'blog:contacto' %}">Contacto</a>
+    </li>
+</ul>
+{% endblock menu_footer %}
